# QuickWebView

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp  main.qml  stdafx.h
example/webres/: test.html
src/: CMakeLists.txt  JSBridge.qml  MacosWebView.h  MacosWebView.mm  QuickWebView.qml  QuickWebViewImpl.cpp  QuickWebViewImpl.h  WebCallBack.cpp  WebCallBack.h  WebViewInterface.h  WindowsWebView.cpp  WindowsWebView.h  stdafx.h
src/cmake/modules/: FindMSWebView2.cmake
webview/core/include/webview/: webview.h
